fix: update color of duration badge for better visibility

--- a/src/styles/WorkExp.css
+++ b/src/styles/WorkExp.css
@@ -39,7 +39,7 @@
   
   .work-badge.duration {
     background-color: #fbf9f94d;
-    color: #d1d5db;
+    color: black;
   }
   
   .work-desc {
